--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  # UI/Widgets
   cupertino_icons: ^1.0.2
+  gap: ^3.0.1
 
 dev_dependencies:
   flutter_test:
