add immutable types and code gen libraries

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,17 @@ dependencies:
   # UI/Widgets
   cupertino_icons: ^1.0.2
   gap: ^3.0.1
+  # Data/core
+  built_value: ^8.6.1
+  built_collection: ^5.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  # Code generation
+  build_runner: ^2.4.6
+  built_value_generator: ^8.6.1
 
 flutter:
   uses-material-design: true
