--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   # Data/core
   built_value: ^8.6.1
   built_collection: ^5.1.1
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
