--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   built_value: ^8.6.1
   built_collection: ^5.1.1
   rxdart: ^0.27.7
+  dio: ^5.3.2
 
 dev_dependencies:
   flutter_test:
